--- a/login/forgotpassword.html
+++ b/login/forgotpassword.html
@@ -18,21 +18,18 @@
           Please change to strong password well known to you and to make your account secure.
         </p>
       </div>
+      <form onsubmit="return validate()" action="Login Page.html">
+        <div class="div-input">
+          <input id="inputEmail" type="email" placeholder="Enter Email">
+          <input id="inputNewPassword" type="password" placeholder="New Password">
+          <input id="inputConfirmPassword" type="password" placeholder="Confirm Password">
+        </div>
 
-      <div class="div-input">
-        <input id="input" type="email" placeholder="Enter Email">
-        <input id="input" type="password" placeholder="New Password">
-        <input id="input" type="password" placeholder="Confirm Password">
-        <input id="input" type="number" placeholder="Enter verification code sent to your email">
-      </div>
-
-      <div class="div-request">
-        <p id="paragraph-request"><span id="span-request">Request for Code</Code></span></p>
-      </div>
-
-      <div class="div-button">
-        <button id="button">Reset</button>
-      </div>
+        <div class="div-button">
+          <button type="submit" id="button">Submit</button>
+        </div>
+      </form>    
     </div>
+    <script src="forgot.js"></script>
   </body>
 </html>
